# SimpleJPEGLibrary

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Decoder/: Decoder.hpp
Encoder/: Encoder.cpp  Encoder.hpp
JPEG/: Constants.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp  MCU.cpp  MCU.hpp  Markers.hpp  Utility.cpp  Utility.hpp
